; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_chip.c_patch_6m_band_edge.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/zd1211rw/extr_zd_chip.c_patch_6m_band_edge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zd_chip = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.zd_chip*, i32)* @patch_6m_band_edge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @patch_6m_band_edge(%struct.zd_chip* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.zd_chip*, align 8
  %5 = alloca i32, align 4
  store %struct.zd_chip* %0, %struct.zd_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.zd_chip*, %struct.zd_chip** %4, align 8
  %7 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %6, i32 0, i32 2
  %8 = call i32 @mutex_is_locked(i32* %7)
  %9 = call i32 @ZD_ASSERT(i32 %8)
  %10 = load %struct.zd_chip*, %struct.zd_chip** %4, align 8
  %11 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %20

15:                                               ; preds = %2
  %16 = load %struct.zd_chip*, %struct.zd_chip** %4, align 8
  %17 = getelementptr inbounds %struct.zd_chip, %struct.zd_chip* %16, i32 0, i32 0
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @zd_rf_patch_6m_band_edge(i32* %17, i32 %18)
  store i32 %19, i32* %3, align 4
  br label %20

20:                                               ; preds = %15, %14
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32 @ZD_ASSERT(i32) #1

declare dso_local i32 @mutex_is_locked(i32*) #1

declare dso_local i32 @zd_rf_patch_6m_band_edge(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
